--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -106,13 +107,13 @@
                 z-index: 1000;
             }
             #maxClientsContainer {
-                position: absolute;
-                bottom: -335px;
-                left: 50%;
-                transform: translateX(-50%);
+                position: relative;
+                bottom: auto;
+                left: auto;
+                transform: none;
                 width: 100%;
                 max-width: 360px;
-                margin: 0;
+                margin: 0 auto;
                 padding: 0.75rem;
                 background-color: #000000;
                 border-radius: 0.5rem;
@@ -146,33 +147,22 @@
                 cursor: not-allowed;
             }
             .button-group {
-                display: flex;
-                flex-direction: row; /* Side by side on mobile */
-                gap: 0.3rem;
-                margin: 0.5rem 0.3rem;
+                flex-direction: column;
+                align-items: center;
+                gap: 0.5rem;
+                margin: 0.5rem 0;
                 width: 100%;
-                justify-content: space-between;
-                flex-wrap: nowrap;
             }
             .button-group button {
-                flex: 1;
-                max-width: 33%; /* Equal width for three buttons */
+                width: 100%;
+                max-width: none;
                 margin: 0;
-                padding: 0.6rem 0.4rem;
-                font-size: 0.8rem;
+                padding: 0.8rem 0.9rem;
+                font-size: 0.9rem;
             }
             #messages {
                 width: 100%;
                 max-width: none;
-            }
-            .bg-white {
-                width: 100%;
-                max-width: none;
-            }
-            #privacyStatus {
-                font-size: 0.875rem;
-                margin-bottom: 0.5rem;
-                padding: 0.25rem 0;
             }
         }
         .message-bubble {
@@ -409,19 +399,18 @@
         }
         @media (max-width: 640px) {
             .button-group {
-                flex-direction: row;
-                gap: 0.3rem;
-                margin: 0.5rem 0.3rem;
+                flex-direction: column;
+                align-items: center;
+                gap: 0.5rem;
+                margin: 0.5rem 0;
                 width: 100%;
-                justify-content: space-between;
-                flex-wrap: nowrap;
             }
             .button-group button {
-                flex: 1;
-                max-width: 33%;
+                width: 100%;
+                max-width: none;
                 margin: 0;
-                padding: 0.6rem 0.4rem;
-                font-size: 0.8rem;
+                padding: 0.8rem 0.9rem;
+                font-size: 0.9rem;
             }
             h1.text-3xl {
                 font-size: 1.5rem;
@@ -448,38 +437,8 @@
             font-size: 0.875rem;
             color: #10b981;
             margin-bottom: 0.5rem;
-            display: block !important;
+            display: block !important; /* Ensure visibility */
             visibility: visible !important;
-        }
-        /* Desktop-specific styles for maxClientsRadios */
-        @media (min-width: 641px) {
-            #maxClientsRadios {
-                display: flex;
-                flex-direction: column;
-                gap: 0.5rem;
-                align-items: center;
-            }
-            #maxClientsRadios button {
-                background-color: #3b82f6;
-                color: white;
-                border-radius: 0.5rem;
-                padding: 0.5rem;
-                font-size: 1rem;
-                width: 60px;
-                text-align: center;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                transition: all 0.2s ease;
-            }
-            #maxClientsRadios button.active {
-                background-color: #10b981;
-            }
-            #maxClientsRadios button:hover:not(:disabled) {
-                background-color: #1d4ed8;
-            }
-            #maxClientsRadios button:disabled {
-                opacity: 0.6;
-                cursor: not-allowed;
-            }
         }
     </style>
 </head>
