--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         body {
             min-height: 100vh;
-            padding-top: 140px;
+            padding-top: 240px; /* Increased to show full logo on desktop */
             padding-bottom: 140px;
             display: flex;
             justify-content: center;
@@ -50,15 +50,15 @@
         }
         #messages.waiting {
             background-color: transparent;
-            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG');
+            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG?sanitize=true');
         }
         .corner-logo {
             position: absolute;
-            top: -50px; /* Moved higher to sit above white box */
+            top: -50px;
             right: 10px;
             width: 256px;
             height: 256px;
-            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logo.png');
+            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logo.png?sanitize=true');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
@@ -66,7 +66,7 @@
             transition: background-image 0.5s ease;
         }
         .corner-logo.wink {
-            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png');
+            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png?sanitize=true');
         }
         .bg-white {
             z-index: 10;
@@ -89,11 +89,11 @@
                 padding: 1rem;
                 max-width: none;
                 width: 100%;
-                margin-top: 50px; /* Adjusted for mobile to avoid logo overlap */
+                margin-top: 50px; /* Adjusted for mobile */
             }
             .corner-logo {
                 position: absolute;
-                top: 0px; /* Adjusted for mobile */
+                top: 0px;
                 right: 10px;
                 width: 128px;
                 height: 128px;
@@ -166,6 +166,21 @@
             #messages {
                 width: 100%;
                 max-width: none;
+            }
+            h1.text-3xl {
+                font-size: 1.5rem;
+                margin-bottom: 0.75rem;
+                padding: 0.25rem 0;
+            }
+            #status {
+                font-size: 0.875rem;
+                margin-bottom: 0.5rem;
+                padding: 0.25rem 0;
+            }
+            #privacyStatus {
+                font-size: 0.875rem;
+                margin-bottom: 0.5rem;
+                padding: 0.25rem 0;
             }
         }
         .message-bubble {
@@ -396,6 +411,9 @@
             }
         }
         @media (min-width: 641px) and (max-width: 1024px) {
+            .bg-white {
+                margin-top: -40px;
+            }
             #maxClientsContainer {
                 margin-top: 145px;
             }
