--- a/random.html
+++ b/random.html
@@ -1,146 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anonomoose Random Chat Board</title>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; img-src 'self' data: https://raw.githubusercontent.com https://cdnjs.cloudflare.com; connect-src 'self' wss://signaling-server-zc6m.onrender.com;">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw==" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-      padding-top: 140px;
-    }
-    .container {
-      text-align: center;
-      padding: 20px;
-      background-color: #fff;
-      color: #000;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      max-width: 500px;
-      width: 100%;
-    }
-    #codesList {
-      margin-top: 20px;
-      text-align: left;
-      max-height: 300px;
-      overflow-y: auto;
-    }
-    .code-item {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      cursor: pointer;
-    }
-    .code-item:hover {
-      background-color: #f0f0f0;
-    }
-    #status {
-      color: #666;
-      margin-bottom: 10px;
-    }
-    #errorMessage {
-      color: #e53e3e;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-  </style>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Anonomoose Random Chat</title>
+ <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net 'sha256-5OWkiZ6vKs+ILJhuMP83x2kY08mNVeuoGmRejQnuJ0E='; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; img-src 'self' data: https://raw.githubusercontent.com https://cdnjs.cloudflare.com; connect-src 'self' wss://signaling-server-zc6m.onrender.com;">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw==" crossorigin="anonymous">
+ <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
+ <style>
+ body {
+ background-color: #000;
+ color: #fff;
+ min-height: 100vh;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ margin: 0;
+ padding-top: 140px;
+ }
+ .container {
+ text-align: center;
+ padding: 20px;
+ background-color: #fff;
+ color: #000;
+ border-radius: 10px;
+ box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+ max-width: 500px;
+ width: 100%;
+ }
+ #codeList {
+ list-style: none;
+ padding: 0;
+ }
+ .code-item {
+ padding: 10px;
+ margin: 5px 0;
+ background-color: #10b981;
+ color: white;
+ border-radius: 5px;
+ cursor: pointer;
+ transition: background-color 0.2s ease;
+ }
+ .code-item:hover {
+ background-color: #059669;
+ }
+ #noChatsMessage {
+ font-size: 1.2rem;
+ font-weight: bold;
+ color: #e53e3e;
+ margin: 1rem 0;
+ }
+ </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Random Chat Board</h1>
-    <div id="status" class="text-center mb-4 text-gray-600">Loading random chat codes...</div>
-    <div id="codesList" class="text-gray-800" role="list" aria-live="polite"></div>
-    <div id="errorMessage" class="hidden"></div>
-    <div class="text-center mt-4">
-      <a href="https://anonomoose.com/index.html" class="text-blue-500 hover:underline" aria-label="Back to main chat">Back to Chat</a>
-    </div>
-  </div>
-  <script>
-    const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
-    const statusElement = document.getElementById('status');
-    const codesList = document.getElementById('codesList');
-    const errorMessageElement = document.getElementById('errorMessage');
-    let clientId = localStorage.getItem('clientId') || Math.random().toString(36).substr(2, 9);
-    localStorage.setItem('clientId', clientId);
-    let token = '';
+ <div class="container">
+ <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Pick a Random Chat</h1>
+ <div id="status" class="text-center mb-4 text-gray-600">Loading available chats...</div>
+ <ul id="codeList"></ul>
+ <button id="refreshButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-blue-600 transition-colors" aria-label="Refresh available chats">Refresh</button>
+ <div class="text-center mt-4">
+ <a href="https://anonomoose.com/index.html" class="text-blue-500 hover:underline">Back to Chat</a>
+ </div>
+ </div>
+ <script>
+ const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
+ const codeList = document.getElementById('codeList');
+ const statusElement = document.getElementById('status');
+ const refreshButton = document.getElementById('refreshButton');
 
-    socket.onopen = () => {
-      console.log('Random page WebSocket opened');
-      socket.send(JSON.stringify({ type: 'connect', clientId }));
-    };
+ function fetchRandomCodes() {
+ if (socket.readyState === WebSocket.OPEN) {
+ statusElement.textContent = 'Loading available chats...';
+ socket.send(JSON.stringify({ type: 'get-random-codes' }));
+ } else {
+ statusElement.textContent = 'Connecting...';
+ }
+ }
 
-    socket.onmessage = (event) => {
-      console.log('Received message:', event.data);
-      try {
-        const data = JSON.parse(event.data);
-        if (data.type === 'connected') {
-          token = data.accessToken;
-          console.log('Received authentication token:', token);
-          socket.send(JSON.stringify({ type: 'get-random-codes', clientId, token }));
-          statusElement.textContent = 'Connected, fetching random codes...';
-        } else if (data.type === 'random-codes') {
-          codesList.innerHTML = '';
-          if (data.codes.length === 0) {
-            statusElement.textContent = 'No random chat codes available.';
-          } else {
-            statusElement.textContent = 'Available random chat codes:';
-            data.codes.forEach(code => {
-              const codeItem = document.createElement('div');
-              codeItem.className = 'code-item';
-              codeItem.textContent = code;
-              codeItem.setAttribute('role', 'button');
-              codeItem.setAttribute('aria-label', `Join chat with code ${code}`);
-              codeItem.addEventListener('click', () => {
-                window.location.href = `https://anonomoose.com/index.html?code=${code}`;
-              });
-              codesList.appendChild(codeItem);
-            });
-          }
-          errorMessageElement.classList.add('hidden');
-        } else if (data.type === 'error') {
-          errorMessageElement.textContent = data.message;
-          errorMessageElement.classList.remove('hidden');
-          statusElement.textContent = 'Error fetching codes';
-        }
-      } catch (error) {
-        console.error('Error parsing message:', error);
-        statusElement.textContent = 'Error processing codes';
-        errorMessageElement.textContent = 'Invalid server response';
-        errorMessageElement.classList.remove('hidden');
-      }
-    };
+ socket.onopen = () => {
+ console.log('Random page WebSocket opened');
+ fetchRandomCodes();
+ };
 
-    socket.onerror = (error) => {
-      console.error('WebSocket error:', error);
-      statusElement.textContent = 'Connection error. Please try again.';
-      errorMessageElement.textContent = 'WebSocket connection failed';
-      errorMessageElement.classList.remove('hidden');
-    };
+ socket.onmessage = (event) => {
+ console.log('Received message:', event.data);
+ try {
+ const data = JSON.parse(event.data);
+ if (data.type === 'random-codes') {
+ codeList.innerHTML = '';
+ if (data.codes.length === 0) {
+ statusElement.textContent = 'No available chats.';
+ const noChatsMsg = document.createElement('p');
+ noChatsMsg.id = 'noChatsMessage';
+ noChatsMsg.textContent = 'Try again later or create your own!';
+ codeList.appendChild(noChatsMsg);
+ } else {
+ statusElement.textContent = 'Select a chat to join:';
+ data.codes.forEach(code => {
+ const li = document.createElement('li');
+ li.className = 'code-item';
+ li.textContent = code;
+ li.onclick = () => {
+ console.log('Selected code:', code);
+ socket.send(JSON.stringify({ type: 'remove-random-code', code }));
+ window.location.href = `https://anonomoose.com/index.html?code=${code}`;
+ };
+ codeList.appendChild(li);
+ });
+ }
+ }
+ } catch (error) {
+ console.error('Error parsing message:', error);
+ statusElement.textContent = 'Error loading chats. Please try again.';
+ }
+ };
 
-    socket.onclose = () => {
-      console.log('WebSocket closed, attempting reconnect');
-      statusElement.textContent = 'Disconnected. Reconnecting...';
-      errorMessageElement.textContent = 'WebSocket connection closed';
-      errorMessageElement.classList.remove('hidden');
-      setTimeout(() => {
-        window.location.reload();
-      }, 5000);
-    };
+ socket.onerror = (error) => {
+ console.error('WebSocket error:', error);
+ statusElement.textContent = 'Connection error. Please try again.';
+ };
 
-    // Periodically request codes to ensure updates
-    setInterval(() => {
-      if (socket.readyState === WebSocket.OPEN && token) {
-        socket.send(JSON.stringify({ type: 'get-random-codes', clientId, token }));
-      }
-    }, 10000);
-  </script>
+ socket.onclose = () => {
+ console.log('WebSocket closed');
+ statusElement.textContent = 'Disconnected. Reconnecting...';
+ setTimeout(() => {
+ window.location.reload();
+ }, 5000);
+ };
+
+ refreshButton.onclick = () => {
+ fetchRandomCodes();
+ };
+ </script>
 </body>
 </html>
