--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
  }
  @media (min-width: 1025px) {
  .bg-white {
- margin-top: -140px;
+ margin-top: -160px;/* changed from 40px */
  }
  #maxClientsContainer {
  min-height: calc(100% + 37.8px);
