--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
  margin-top: -40px;
  }
  #maxClientsContainer {
- margin-top: 145px;
+ margin-top: 45px; /* changed from 145px */
  }
  }
  @media (max-width: 640px) {
