--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
  }
  #maxClientsContainer {
  position: absolute;
- bottom: -335px;
+ bottom: -235; /* changed from 335px */
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
@@ -415,7 +415,7 @@
  margin-top: -40px;
  }
  #maxClientsContainer {
- margin-top: 45px; /* changed from 145px */
+ margin-top: 145px; /* changed from 145px */
  }
  }
  @media (max-width: 640px) {
