--- a/index.html
+++ b/index.html
@@ -416,18 +416,23 @@
       color: #1d4ed8;
     }
     @media (min-width: 1025px) {
-      .bg-white {
-        margin-top: -165px;
-      }
-      #maxClientsContainer {
-        min-height: calc(100% + 37.8px);
-        margin-top: 145px;
-      }
-    }
-    @media (min-width: 641px) and (max-width: 1024px) {
-      .bg-white {
-        margin-top: -165px;
-      }
+  .bg-white {
+    margin-top: -165px;
+  }
+  #maxClientsContainer {
+    min-height: calc(100% + 37.8px);
+    margin-top: 50px; /* Adjusted from 145px to 50px */
+  }
+}
+
+@media (min-width: 641px) and (max-width: 1024px) {
+  .bg-white {
+    margin-top: -165px;
+  }
+  #maxClientsContainer {
+    margin-top: 50px; /* Adjusted from 145px to 50px */
+  }
+}
       #maxClientsContainer {
         margin-top: 145px;
       }
